Fix z-index Sideba property and footer buttons

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -22,6 +22,11 @@ a {
 .css-1fpt91a {
     bottom: 0;
 }
+.footer-item-button{
+    padding: 0 5px;
+    border-right: 2px solid black;
+    border-left: 2px solid black;
+}
 
 /* @media only screen and (max-width: 600px) {
     .footer {
